syntax = "proto3";

package aed;

import "google/protobuf/empty.proto";
import "aed.proto";

option go_package = "github.com/sologenic/com-fs-aed-model;aed";

service AEDService {
    // Store a single AED
    rpc Upsert(AED) returns (google.protobuf.Empty) {}
    // Store multiple AED
    rpc BatchUpsert(AEDs) returns (google.protobuf.Empty) {}
    // Get a list of AED by from/to, symbol, period and network
    rpc GetBySymbol(GetBySymbolOptions) returns (AEDs) {}
}

message GetBySymbolOptions {
    string Symbol = 1;
    int64 From = 2;
    int64 To = 3;
    string Network = 4;
    string Period = 5;
    // Indicate if the data should be backfilled with the previous period if no data is found
    bool Backfill = 6;
    // Indicates if the data is allowed to be retrieved from the cache (default: false - no cache)
    bool AllowCache = 7;
}

// Used in messaging through pub sub
message RecalculationRequest {
    string Network = 1;
    string Symbol = 2;
    int64 TimeStamp = 3;
}